# toodo

./: README.md
Toodolist/: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  ine[dex.html  loga[in.html  navbar.html  pyproject.toml  regiseeter.html  run.py  scheduler.py  services.py  test.py  toodo.db  utils.py
Toodolist/Toodolist/: ine[dex.html  loga[in.html  regiseeter.html  run.py  test.py  toodo.db  utils.py
Toodolist/Toodolist/migrations/: env.py
Toodolist/Toodolist/routes/: auth.py  tarefas.py  user.py
Toodolist/Toodolist/static/: styles.css
Toodolist/Toodolist/templates/: bootstrap.html  current.html  index.html  login.html  navbar.html  profile.html  register.html
Toodolist/database/: conf.py
Toodolist/migrations/: env.py
Toodolist/migrations/versions/: 0217c3538005_criando_relacionamento_de_delete_entre_.py  084188f24db8_alterando_coluna_tel_para_email.py  0964273f231d_criando_tabelas.py  133b8cec98cd_subindo_tabelas.py  378c061666cd_nullable_true_em_password.py  56b4dc18937a_criando_valor_default_false_na_coluna_.py  58d6dbeee468_nullable_false_p_user_e_tarefas.py  7616f4216e24_adicionando_create_at_em_user.py  7cc8a2d7fc75_criando_valor_default_false_na_coluna_.py  ec6603df45c4_criando_coluna_booleana_para_envio_de_.py
Toodolist/models/: models.py
Toodolist/routes/: auth.py  landing.py  sobre.py  tarefas.py  user.py
Toodolist/static/: styles.css
Toodolist/templates/: bootstrap.html  index.html  landing.html  login.html  navbar.html  profile.html  register.html  sobre.html
Toodolist/templates/email/: email_gazette.html
(+2 files in other folders)
