[project]
name = "toodolist"
version = "0.1.0"
description = ""
authors = [
    {name = "Weder Videira Borges",email = "wederborgesemp@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "twilio (>=9.10.9,<10.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "phonenumbers (>=9.0.31,<10.0.0)",
    "apscheduler (>=3.11.2,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
